--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,20 @@
-<ul>
-  <li *ngFor="let device of devices">
-    {{ device.deviceName }} - {{ device.type }} - {{ device.isOn ? 'On' : 'Off' }}
-  </li>
-  </ul>
+<table>
+  <thead>
+    <tr>
+      <th>Device Name</th>
+      <th>Device Type</th>
+      <th>Device Status</th>
+    </tr>
+  </thead>
+  <tr *ngFor="let device of devices">
+    <td>
+      {{ device.deviceName }}
+    </td>
+    <td>
+      {{ device.type }}
+    </td>
+    <td>
+      {{ device.isOn ? "On" : "Off" }}
+    </td>
+  </tr>
+</table>
