--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,57 @@
-<table>
-  <thead>
-    <tr>
-      <th>Device Name</th>
-      <th>Device Type</th>
-      <th>Device Status</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <tr *ngFor="let device of devices">
-      <td>
-        {{ device.deviceName }}
-      </td>
-      <td>
-        {{ device.type }}
-      </td>
-      <td>
-        {{ device.isOn ? "On" : "Off" }}
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="mt-10">HOME DEVICE MANAGER</h1>
+      <div  *ngIf="message" class="alert alert-dark" role="alert">
+        {{message}}
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="mb-3">
+            <label for="deviceName" class="form-label">Device Name:</label>
+            <input type="text"  id="deviceName" [(ngModel)]="deviceName" class="form-control" placeholder="Enter Device Name">
+          </div>
+          <div class="mb-3">
+            <label for="deviceType" class="form-label">Device Type:</label>
+            <input type="text"  id="deviceType" [(ngModel)]="deviceType" class="form-control" placeholder="Enter Device Type">
+          </div>
+          <div class="mb-3">
+            <label for="deviceExpDate" class="form-label">Device Expiration Date:</label>
+            <input type="text"  id="deviceExpDate" [(ngModel)]="deviceExpDate" class="form-control" placeholder="Enter Expiration Date">
+          </div>
+          
+          <div class="mb-3">
+            <button (click)="createDevice()" class="btn btn-primary">Add new device</button>
+          </div>
+        </div>
+      </div>
+      
+      <hr>
+      
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Device Name</th>
+            <th scope="col">Device Type</th>
+            <th scope="col">Device Status</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let device of devices">
+            <td>
+              {{ device.deviceName }}
+            </td>
+            <td>
+              {{ device.type }}
+            </td>
+            <td>
+             <span class="badge" [ngClass]="{'bg-success': device.isOn, 'bg-danger': !device.isOn }" >{{ device.isOn ? "On" : "Off" }}</span> 
+            </td>
+            <td><Button class="btn btn-sm btn-secondary" (click)="toggleDevice(device)">Switch {{ device.isOn ? "Off" : "On" }}</Button></td>
+          </tr>
+        </tbody>
+      </table>      
+    </div>
+  </div>
+</div>
